--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta charset=utf-8> </head>
     <body>
        <center><h1>My Project</h1></center> 
-        <form action="/my-link/">
+        <form action="/my-link/" method ="post">
             <center><input type="submit" value="Forward" /></center>
         </form>
     
