--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,29 @@
 <!doctype html>
 
+<html>
+<head>
 
-<head><title>Test</title> 
-    <meta charset=utf-8> </head>
+    <link rel="stylesheet" href="webstyle.css">
+    <title>
+        Test
+    </title> 
+    <meta charset=utf-8> 
+    <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.1.2/socket.io.js'></script>
+
+
+</head>
+
     <body>
-       <center><h1>My Project</h1></center> 
-        <form action="/my-link/">
-            <center><input type="submit" value="Forward" /></center>
+       <center>
+           <h1>My Project</h1>
+        </center> 
+        <form action="/my-link/" methods=['POST', 'GET']>
+            <center>
+                <input type="submit" value="Forward" />
+            </center>
         </form>
-    
 
-    </body>
+
+
+</html>
