--- a/templates/index.html
+++ b/templates/index.html
@@ -10,15 +10,14 @@
     <meta charset=utf-8> 
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.1.2/socket.io.js'></script>
-
-
+    
 </head>
 
     <body>
        <center>
            <h1>My Project</h1>
         </center> 
-        <form action="/my-link/" methods=['POST', 'GET']>
+        <form action="/my-link/" method= "post">
             <center>
                 <input type="submit" value="Forward" />
             </center>
