--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,6 @@
         Test
     </title> 
     <meta charset=utf-8> 
-    <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js'></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.1.2/socket.io.js'></script>
     
 </head>
 
@@ -15,7 +13,7 @@
        <center>
            <h1>My Project</h1>
         </center> 
-        <form action="/my-link/" method= "post">
+        <form action="/my_link/<string:ping>" method= "post">
             <center>
                 <input type="submit" value="Forward" />
             </center>
