--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 
 <html>
 <head>
+
     <title>
         Test
     </title> 
@@ -13,7 +14,7 @@
        <center>
            <h1>My Project</h1>
         </center> 
-        <form action="/my_link/<string:ping>" method= "post">
+        <form action= "/mylink/<string:ping>" method = get method = post>
             <center>
                 <input type="submit" value="Forward" />
             </center>
