--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
        <center>
            <h1>My Project</h1>
         </center> 
-        <form action= "/mylink/<string:ping>" method = get method = post>
+        <form action= "/mylink/<string:ping>" method = get>
             <center>
                 <input type="submit" value="Forward" />
             </center>
