--- a/templates/index.html
+++ b/templates/index.html
@@ -14,12 +14,28 @@
        <center>
            <h1>My Project</h1>
         </center> 
-        <form action= "/mylink/<string:ping>" method = get>
-            <center>
-                <input type="submit" value="Forward" />
-            </center>
-        </form>
 
+            <form action= "/mylink/dire1" method = get style="display : inline">
+            <center>
+                    <input type="submit" value="Forward" />
+            </center>
+            </form>
+            <center>
+            <form action= "/mylink/dire2" method = get style="display : inline">
+            
+                    <input type="submit" value="Left" />
+            </form>
+
+            <form action= "/mylink/dire3" method = get style="display : inline">
+                    <input type="submit" value="Back" />
+            </form>
+
+            <form action= "/mylink/dire4" method = get style="display : inline"> 
+                    <input type="submit" value="Right" />
+            </center>
+            </form>
+
+    </body>
 
 
 </html>
