--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,63 @@
         Test
     </title> 
     <meta charset=utf-8> 
-    
+    <script>
+
+
+
+function loadDoc() {
+                var xhttp = new XMLHttpRequest();
+                 xhttp.onreadystatechange = function() {
+           if (this.readyState == 4 && this.status == 200) {
+                 document.getElementById("Forward").innerHTML = "Moving Forward";
+    }
+  };
+                 xhttp.open("GET", "Forward", true);
+  xhttp.send("Forward");
+}
+
+
+
+function Left() {
+                var xhttp = new XMLHttpRequest();
+                 xhttp.onreadystatechange = function() {
+           if (this.readyState == 4 && this.status == 200) {
+                 document.getElementById("Forward").innerHTML = "Moving Left";
+    }
+  };
+                 xhttp.open("GET", "Left", true);
+  xhttp.send();
+}
+
+
+
+function Back() {
+                var xhttp = new XMLHttpRequest();
+                 xhttp.onreadystatechange = function() {
+           if (this.readyState == 4 && this.status == 200) {
+                 document.getElementById("Forward").innerHTML = "Moving Back";
+    }
+  };
+                 xhttp.open("GET", "Back", true);
+  xhttp.send();
+}
+
+
+
+function Right() {
+                var xhttp = new XMLHttpRequest();
+                 xhttp.onreadystatechange = function() {
+           if (this.readyState == 4 && this.status == 200) {
+                 document.getElementById("Forward").innerHTML = "Moving Right";
+    }
+  };
+                 xhttp.open("GET", "Right", true);
+  xhttp.send();
+}
+    </script>
+       
+
+
 </head>
 
     <body>
@@ -15,27 +71,32 @@
            <h1>My Project</h1>
         </center> 
 
-            <form action= "/mylink/dire1" method = get style="display : inline">
+            <form action= "/dire1" method = get style="display : inline">
             <center>
-                    <input type="submit" value="Forward" />
+                    <button name = "Forward" type="button" value="Forward" onclick="loadDoc()">Forward</button>
+                    
             </center>
             </form>
             <center>
-            <form action= "/mylink/dire2" method = get style="display : inline">
+            <form action= "/dire2" method = get style="display : inline">
             
-                    <input type="submit" value="Left" />
+                    <button type="button" value="Left" onclick = "Left()">Left</button>
+            </form>
+            
+            <form action= "/dire3" method = get style="display : inline" >
+                    <button type="button" value="Back" onclick = "Back()">Back</button>
             </form>
 
-            <form action= "/mylink/dire3" method = get style="display : inline">
-                    <input type="submit" value="Back" />
-            </form>
-
-            <form action= "/mylink/dire4" method = get style="display : inline"> 
-                    <input type="submit" value="Right" />
+            <form action= "/dire4" method = get style="display : inline" >  
+                    <button type="button" value="Right" onclick = "Right()">Right</button>
             </center>
             </form>
+            <center><p id = "Forward"></p></center>
+        
 
     </body>
 
 
 </html>
+
+
