--- a/templates/index.html
+++ b/templates/index.html
@@ -8,172 +8,252 @@
     </title> 
     <meta charset=utf-8> 
     <style>
-      .robot {
-        position: absolute;
-        top: 166px;
-        left: 350px;
-        max-width:100%;
-        
-      }
+
+      canvas {
+    border: 1px solid #d3d3d3;
+    background-color: #f1f1f1;
+}
     </style>
+
     <script>
 
-function loadDoc() {
-                var xhttp = new XMLHttpRequest();
+ var ismouseup = 0;
+
+
+
+</script>
+
+                        <script>
+                          var myGamePiece;
+                          function startGame() {
+                              myGameArea.start();
+                              myGamePiece = new component(30, 30, "red", 10, 120);
+                              myObstacle = new component(5, 800, "green", 995, 0);
+                              obstacle1 = new component(5, 800 , "green", 0, 0);
+                              obstacle2 = new component(1000, 5 , "green", 0, 0);
+                              obstacle3 = new component(1000, 5 , "green", 0, 395)
+
+
+                          }
+                          
+                          var myGameArea = {
+                              canvas : document.createElement("canvas"),
+                              start : function() {
+                                  this.canvas.width = 1000;
+                                  this.canvas.height = 400;
+                                  this.context = this.canvas.getContext("2d");
+                                  document.body.insertBefore(this.canvas, document.body.childNodes[0]);
+                                  this.interval = setInterval(updateGameArea, 20);
+  },
+  clear : function() {
+    this.context.clearRect(0, 0, this.canvas.width, this.canvas.height);
+  }
+}
+ 
+                          
+        function component(width, height, color, x, y) {
+          this.type = type;
+
+          this.speedX = 0;
+          this.speedY = 0;
+          this.width = width;
+          this.height = height;
+          this.x = x;
+          this.y = y;
+          this.update = function(){
+
+          ctx = myGameArea.context;
+          ctx.fillStyle = color;
+          ctx.fillRect(this.x, this.y, this.width, this.height);
+      }
+      this.newPos = function() {
+         this.x += this.speedX;
+         this.y += this.speedY;
+       }
+  this.crashWith = function(otherobj) {
+    var myleft = this.x;
+    var myright = this.x + (this.width);
+    var mytop = this.y;
+    var mybottom = this.y + (this.height);
+    var otherleft = otherobj.x;
+    var otherright = otherobj.x + (otherobj.width);
+    var othertop = otherobj.y;
+    var otherbottom = otherobj.y + (otherobj.height);
+    var crash = true;
+    if ((mybottom < othertop) ||
+    (mytop > otherbottom) ||
+    (myright < otherleft) ||
+    (myleft > otherright)) {
+      crash = false;
+    }
+    return crash;
+  }
+  }
+  function updateGameArea() {
+  if (myGamePiece.crashWith(myObstacle)) {
+    myGameArea.stop();
+  } else {
+
+  myGameArea.clear();
+  myObstacle.update();
+  myGamePiece.newPos();
+  myGamePiece.update();
+  obstacle1.update();
+  obstacle2.update();
+  obstacle3.update();
+}
+  }
+
+  var mouseDown = 0;
+document.body.onmousedown = function() { 
+    mouseDown = 1;
+}
+document.body.onmouseup = function() {
+    mouseDown = 0;
+}
+  function gameup() {
+  myGamePiece.speedY -= 1
+  var xhttp = new XMLHttpRequest();
                  xhttp.onreadystatechange = function() {
+
            if (this.readyState == 4 && this.status == 200) {
                  document.getElementById("Forward").innerHTML = "Moving Up";
     }
   };
-                 xhttp.open("GET", "Up", true);
-  xhttp.send("Forward");
-}
-
-
-
-function left() {
-                var xhttp = new XMLHttpRequest();
-                 xhttp.onreadystatechange = function() {
-           if (this.readyState == 4 && this.status == 200) {
-                 document.getElementById("Forward").innerHTML = "Moving Left";
-    }
-  };
-                 xhttp.open("GET", "Left", true);
+  
+  upinterval = setInterval(function(){
+xhttp.open("GET", "Up", true)
   xhttp.send();
-}
+},500)
 
-
-
-function down() {
-                var xhttp = new XMLHttpRequest();
+    }
+  
+function gamedown() {
+  myGamePiece.speedY += 1;
+  var xhttp = new XMLHttpRequest();
                  xhttp.onreadystatechange = function() {
+
            if (this.readyState == 4 && this.status == 200) {
                  document.getElementById("Forward").innerHTML = "Moving Down";
     }
   };
-                 xhttp.open("GET", "Down", true);
+  
+  downinterval = setInterval(function(){
+xhttp.open("GET", "Down", true)
   xhttp.send();
-}
+},500)
+
+    }
 
 
-
-function right() {
-                var xhttp = new XMLHttpRequest();
+function gameleft() {
+  myGamePiece.speedX -= 1;
+  var xhttp = new XMLHttpRequest();
                  xhttp.onreadystatechange = function() {
+
            if (this.readyState == 4 && this.status == 200) {
-                 document.getElementById("Forward").innerHTML = "Moving Right";
+                 document.getElementById("Forward").innerHTML = "Moving Left";
     }
   };
-                 xhttp.open("GET", "Right", true);
-  xhttp.send();
-}
-</script>
-<script>
-  function move_imgright() {
-  var step=25; // change this to different step value
-  var y=document.getElementById('i1').offsetLeft; 
-  y= y + step;
-  document.getElementById('i1').style.left= y + "px";
-
-        }
-</script>
-
-
-<script>
-  function move_imgback() {
-  var step=25; // change this to different step value
-  var x=document.getElementById('i1').offsetTop;
-  x= x + step;
-  document.getElementById('i1').style.top= x + "px";
-
-  }
-  </script>
-
-
-<script>
-  function move_imgup() {
-  var step=25; // change this to different step value
-  var x=document.getElementById('i1').offsetTop;
-  x= x - step;
-  document.getElementById('i1').style.top= x + "px";
   
+  leftinterval = setInterval(function(){
+xhttp.open("GET", "Left", true)
+  xhttp.send();
+},500)
+}
 
-  }
-</script>
+function gameright() {
+  myGamePiece.speedX += 1;
+  var xhttp = new XMLHttpRequest();
+                 xhttp.onreadystatechange = function() {
 
+           if (this.readyState == 4 && this.status == 200) {
+                 document.getElementById("Forward").innerHTML = "Moving right";
+    }
+  };
+  
+  rightinterval = setInterval(function(){
+xhttp.open("GET", "Right", true)
+  xhttp.send();
+},500)
+}
+function stopMove() {
+  clearInterval(upinterval);
 
-<script>
-  function move_imgleft() {
-  var step=25; // change this to different step value
-  var y=document.getElementById('i1').offsetLeft;
-  y= y - step;
-  document.getElementById('i1').style.left= y + "px";
+  myGamePiece.speedX = 0;
+  myGamePiece.speedY = 0;
 
-  }
-</script>
-<script>
-  var y = 
-</script>
+}
+function stopRight(){
+  clearInterval(rightinterval);
+  myGamePiece.speedX = 0;
+  myGamePiece.speedY = 0;
+}
 
-        <script>
-          function moveright(){
-            move_imgright();
-            right();
-          }
-        </script>
-        <script>
-          function moveup(){
-            move_imgup();
-            loadDoc();
-          }
-        </script>
-        <script>
-          function moveleft(){
-            move_imgleft();
-            left();
-          }
-        </script>
-         <script>
-        function movedown(){
-         move_imgback();
-             down();
-                          }
-                        </script>
+function stopLeft(){
+  clearInterval(leftinterval);
+  myGamePiece.speedX = 0;
+  myGamePiece.speedY = 0;
+}
+function stopDown(){
+  clearInterval(downinterval);
+  myGamePiece.speedX = 0;
+  myGamePiece.speedY = 0;
+}
+                          </script>
+
+                          <script>
+                            function moveright(){
+                              gameright();
+                            }
+                          </script>
+                          <script>
+                            function moveup(){
+
+                              gameup();
+                            }
+                          
+                          </script>
+                          <script>
+                            function moveleft(){
+                              gameleft();
+                            }
+                          </script>
+                           <script>
+                          function movedown(){
+                           gamedown();
+                                            }
+                                          </script>
 </head>
 
-    <body>
        <center>
            <h1>My Project</h1>
         </center> 
-
             <form action= "/dire1" method = get style="display : inline">
             <center>
-                    <button onclick="moveup()" name = "Forward" type="button" value="Forward">up</button>
+                    <button onmousedown="moveup()" onmouseup="stopMove()" name = "Forward" type="button" value="Forward">Up</button>
                     
             </center>
             </form>
             <center>
             <form action= "/dire2" method = get style="display : inline">
             
-                    <button onclick="moveleft()" type="button" value="Left" >Left</button>
+                    <button onmousedown="moveleft()" onmouseup="stopLeft()" type="button" value="Left" >Left</button>
             </form>
             
             <form action= "/dire3" method = get style="display : inline" >
-                    <button onclick="movedown()"  type="button" value="Back">down</button>
+                    <button onmousedown="movedown()" onmouseup="stopDown()"  type="button" value="Back">down</button>
             </form>
 
             <form action= "/dire4" method = get style="display : inline" >  
-                    <button onclick="moveright()"  type="button" value="Right">Right</button>
+                    <button onmousedown="moveright()" onmouseup="stopRight()"  type="button" value="Right">Right</button>
             </center>
             </form>
 
 
 
     </body>
-    <img class= "robot" src="{{url_for('static', filename='robot.png')}}" id='i1' width="25" height="25">
-          <center><img src="{{url_for('static', filename='routepng.png')}}" width="1000" height="500" /></center>
           <center><p id = "Forward"></p></center>
-
+         <center> <body onload="startGame()"></body></center>
 </html>
-
 
